Add user settings, favorites, and history support
Introduces user settings persistence, favorites, and navigation history features. Adds ISettingsService interface and related models (UserSettings, FavoriteItem, NavigationHistoryItem) in Core. Implements SettingsService with JSON serialization and AOT support. Updates FilePanelViewModel to support favorites, history, and search filter. Adds platform publish scripts and updates styles for new UI elements. Targets .NET 8 and enables trimming/AOT compatibility in project files.

--- a/src/SharpCommander.Core/SharpCommander.Core.csproj
+++ b/src/SharpCommander.Core/SharpCommander.Core.csproj
@@ -1,12 +1,23 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net10.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <LangVersion>latest</LangVersion>
     <RootNamespace>SharpCommander.Core</RootNamespace>
     <AssemblyName>SharpCommander.Core</AssemblyName>
+    
+    <!-- AOT Compatibility -->
+    <IsAotCompatible>true</IsAotCompatible>
+    <EnableTrimAnalyzer>true</EnableTrimAnalyzer>
+    <IsTrimmable>true</IsTrimmable>
+  </PropertyGroup>
+
+  <!-- Exclude debug symbols from Release/Publish -->
+  <PropertyGroup Condition="'$(Configuration)' == 'Release'">
+    <DebugType>none</DebugType>
+    <DebugSymbols>false</DebugSymbols>
   </PropertyGroup>
 
 </Project>
