--- a/src/SharpCommander.Desktop/SharpCommander.Desktop.csproj
+++ b/src/SharpCommander.Desktop/SharpCommander.Desktop.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net10.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <LangVersion>latest</LangVersion>
@@ -16,6 +16,21 @@
     <Product>SharpCommander</Product>
     <Description>A modern, cross-platform dual-pane file manager built with Avalonia UI</Description>
     <Copyright>Copyright © AURGO 2024</Copyright>
+    
+    <!-- AOT and Trimming Compatibility (always enabled for analysis) -->
+    <IsAotCompatible>true</IsAotCompatible>
+    <EnableTrimAnalyzer>true</EnableTrimAnalyzer>
+    <JsonSerializerIsReflectionEnabledByDefault>false</JsonSerializerIsReflectionEnabledByDefault>
+  </PropertyGroup>
+
+  <!-- Publishing Configuration for Self-Contained and AOT -->
+  <PropertyGroup Condition="'$(PublishAot)' == 'true' or '$(Configuration)' == 'Release'">
+    <PublishTrimmed>true</PublishTrimmed>
+    <TrimMode>full</TrimMode>
+    <InvariantGlobalization>false</InvariantGlobalization>
+    <!-- Exclude debug symbols from publish -->
+    <DebugType>none</DebugType>
+    <DebugSymbols>false</DebugSymbols>
   </PropertyGroup>
 
   <ItemGroup>
