--- a/src/SharpCommander.Desktop/SharpCommander.Desktop.csproj
+++ b/src/SharpCommander.Desktop/SharpCommander.Desktop.csproj
@@ -10,6 +10,8 @@
     <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
     <ApplicationManifest>app.manifest</ApplicationManifest>
     <AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
+    <Icon>Resources\icon.ico</Icon>
+    <ApplicationIcon>Resources\icon.ico</ApplicationIcon>
     <Version>2.0.0</Version>
     <Authors>AURGO</Authors>
     <Company>AURGO</Company>
